[gd_scene load_steps=17 format=2]

[ext_resource path="res://Textures/logo_eesc.png" type="Texture" id=1]
[ext_resource path="res://Textures/rerob_logo.png" type="Texture" id=2]
[ext_resource path="res://Fonts/LuckiestGuy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/initialization_options.gd" type="Script" id=4]
[ext_resource path="res://Fonts/LuckiestGuy.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="DynamicFont" id=2]
size = 80
use_mipmaps = true
use_filter = true
extra_spacing_top = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="GDScript" id=10]
script/source = "extends \"res://Scripts/selection_list.gd\"

func list_devices():
	entries_list = InputDevice.interfaces_list
	refresh_list()"

[sub_resource type="GDScript" id=11]
script/source = "extends \"res://Scripts/selection_list.gd\"

func list_axes():
	entries_list = InputDevice.axes_list
	refresh_list()"

[sub_resource type="GDScript" id=4]
script/source = "extends \"res://Scripts/selection_list.gd\"

func _ready():
	var entries_list = GameManager.list_games()
	refresh_list()"

[sub_resource type="GDScript" id=9]
script/source = "extends \"res://Scripts/selection_list.gd\"

func set_game( game_name ):
	entries_list = GameManager.list_game_variables( game_name )
	refresh_list()
"

[sub_resource type="DynamicFont" id=5]
size = 22
use_mipmaps = true
use_filter = true
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 22
use_mipmaps = true
use_filter = true
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 22
use_mipmaps = true
use_filter = true
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 22
use_mipmaps = true
use_filter = true
extra_spacing_top = 8
font_data = ExtResource( 3 )

[node name="InitScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitlePanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -550.0
custom_styles/panel = SubResource( 1 )

[node name="EESCLogo" type="TextureRect" parent="TitlePanel"]
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 12.0
margin_right = 1789.0
margin_bottom = 1703.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )
expand = true

[node name="ReRobLogo" type="TextureRect" parent="TitlePanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 22.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
expand = true

[node name="TitleLabel" type="Label" parent="TitlePanel"]
anchor_right = 1.0
margin_left = -10.0
margin_top = 36.0
margin_right = -10.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.296875, 0.296875, 0.296875, 1 )
text = "Rehab Games"
align = 1
valign = 1

[node name="ControlsPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 180.0
margin_right = -10.0
margin_bottom = -10.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 4 )

[node name="UserInput" type="LineEdit" parent="ControlsPanel"]
anchor_right = 1.0
margin_left = 130.0
margin_top = 18.0
margin_right = -888.0
margin_bottom = 69.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "User"
align = 1
max_length = 4
caret_blink = true

[node name="UserLabel" type="Label" parent="ControlsPanel/UserInput"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -24.5
margin_right = -7.0
margin_bottom = 25.5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "User:"
align = 1
valign = 1

[node name="DeviceSelector" type="Panel" parent="ControlsPanel"]
anchor_right = 1.0
margin_left = 156.0
margin_top = 86.0
margin_right = -680.0
margin_bottom = 138.0

[node name="SelectionList" type="MenuButton" parent="ControlsPanel/DeviceSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "<Select>"
script = SubResource( 10 )

[node name="Label" type="Label" parent="ControlsPanel/DeviceSelector"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -25.0
margin_right = -7.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Device:"
align = 1
valign = 1

[node name="AxisSelector" type="Panel" parent="ControlsPanel"]
anchor_right = 1.0
margin_left = 700.0
margin_top = 86.0
margin_right = -36.0
margin_bottom = 138.0

[node name="SelectionList" type="MenuButton" parent="ControlsPanel/AxisSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "<Select>"
script = SubResource( 11 )

[node name="Label" type="Label" parent="ControlsPanel/AxisSelector"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -25.0
margin_right = -10.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Axis:"
align = 1
valign = 1

[node name="GameSelector" type="Panel" parent="ControlsPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 143.0
margin_top = 121.0
margin_right = -720.0
margin_bottom = 171.0

[node name="SelectionList" type="MenuButton" parent="ControlsPanel/GameSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "<Select>"
script = SubResource( 4 )

[node name="Label" type="Label" parent="ControlsPanel/GameSelector"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game:"
align = 1
valign = 1

[node name="VariableSelector" type="Panel" parent="ControlsPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 740.0
margin_top = 119.0
margin_right = -36.0
margin_bottom = 171.0

[node name="SelectionList" type="MenuButton" parent="ControlsPanel/VariableSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "<Select>"
script = SubResource( 9 )

[node name="Label" type="Label" parent="ControlsPanel/VariableSelector"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -25.0
margin_right = -13.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Variable:"
align = 1
valign = 1

[node name="AddressInput" type="LineEdit" parent="ControlsPanel"]
anchor_right = 1.0
margin_left = 560.0
margin_top = 18.0
margin_right = -260.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 5 )
text = "ip://127.0.0.1:50000"
align = 1
caret_blink = true

[node name="AddressLabel" type="Label" parent="ControlsPanel/AddressInput"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -25.0
margin_right = -10.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Address:"
align = 1
valign = 1

[node name="ConnectButton" type="Button" parent="ControlsPanel"]
anchor_right = 1.0
margin_left = 1042.0
margin_top = 18.0
margin_right = -38.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "Connect"

[node name="PlayButton" type="Button" parent="ControlsPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = -62.0
margin_right = -400.0
margin_bottom = -15.0
grow_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="PositionSlider" type="HSlider" parent="ControlsPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -58.0
margin_right = -841.0
margin_bottom = -40.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001
editable = false
focus_mode = 0

[node name="NumericDisplay" type="Label" parent="ControlsPanel/PositionSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -188.5
margin_top = -28.3333
margin_right = 184.5
margin_bottom = 6.66669
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Position: 0"
align = 1
valign = 1

[node name="PositionSetpointSlider" type="HSlider" parent="ControlsPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 33.0
margin_top = 11.0
margin_right = -842.0
margin_bottom = 27.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="NumericDisplay" type="Label" parent="ControlsPanel/PositionSetpointSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -186.5
margin_top = -29.6667
margin_right = 186.5
margin_bottom = 5.33331
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Position setpoint: 0"
align = 1
valign = 1

[node name="ForceSlider" type="HSlider" parent="ControlsPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 648.0
margin_top = -58.0
margin_right = -230.0
margin_bottom = -40.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001
editable = false
ticks_on_borders = true
focus_mode = 0

[node name="NumericDisplay" type="Label" parent="ControlsPanel/ForceSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -189.0
margin_top = -28.3333
margin_right = 184.0
margin_bottom = 6.66669
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Force: 0"
align = 1
valign = 1

[node name="ForceSetpointSlider" type="HSlider" parent="ControlsPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 648.0
margin_top = 11.0
margin_right = -229.0
margin_bottom = 27.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="NumericDisplay" type="Label" parent="ControlsPanel/ForceSetpointSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -185.5
margin_top = -29.6667
margin_right = 187.5
margin_bottom = 5.33331
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Force setpoint: 0"
align = 1
valign = 1

[node name="CalibrationToggle" type="CheckButton" parent="ControlsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 48.0
margin_right = 147.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Calibration:  "

[node name="OffsetToggle" type="CheckButton" parent="ControlsPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 117.0
margin_top = 48.0
margin_right = 327.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Offset:   "

[node name="OperationToggle" type="CheckButton" parent="ControlsPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -371.0
margin_top = 48.0
margin_right = -102.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Operation:"
[connection signal="text_changed" from="ControlsPanel/AddressInput" to="ControlsPanel" method="_on_AddressInput_text_changed"]
[connection signal="pressed" from="ControlsPanel/ConnectButton" to="ControlsPanel" method="_on_ConnectButton_pressed"]
[connection signal="value_changed" from="ControlsPanel/PositionSetpointSlider" to="ControlsPanel" method="_on_SetpointSlider_value_changed"]
[connection signal="value_changed" from="ControlsPanel/ForceSetpointSlider" to="ControlsPanel" method="_on_SetpointSlider_value_changed"]
[connection signal="toggled" from="ControlsPanel/CalibrationToggle" to="ControlsPanel" method="_on_CalibrationToggle_toggled"]
[connection signal="toggled" from="ControlsPanel/OffsetToggle" to="ControlsPanel" method="_on_DirectionSelector_toggled"]
[connection signal="toggled" from="ControlsPanel/OperationToggle" to="ControlsPanel" method="_on_CalibrationToggle_toggled"]
